set subtitle linkable and fix image alignment

--- a/src/drui-www/styles/global.less
+++ b/src/drui-www/styles/global.less
@@ -63,7 +63,7 @@
   }
   .md-images {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: space-between;
 
       img {
